added margins to main and angular box

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <body>
     <header>
       <Navbar>
-        <!-- Put the links there-->
         <ul class="nav nav-pills">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#"
@@ -71,9 +70,9 @@
         </ul>
       </Navbar>
     </header>
-    <main class="container-lg">
+    <main class="container-lg my-4 me-3">
       <div class="row">
-        <div class="col-6">
+        <div class="col-7">
           <div class="row" id="angular-main-row">
             <h2>Angular</h2>
             <p>
@@ -369,7 +368,7 @@
             </p>
           </div>
         </div>
-        <div class="col-3">
+        <div class="col-3 mt-5 ms-4 px-2">
           <div class="border border-primary">
             <div class="row" id="img">
               <img
@@ -378,7 +377,7 @@
               />
             </div>
             <div class="row" id="two-cols">
-              <div class="col-6">
+              <div class="col-4 ps-4">
                 <p><b>Developer(s)</b></p>
                 <p><b>Initial release</b></p>
                 <p><b>Stable release</b></p>
@@ -390,7 +389,7 @@
                 <p><b>License</b></p>
                 <p><b>Website</b></p>
               </div>
-              <div class="col-6">
+              <div class="col-6 ms-4 ps-4">
                 <p>Google</p>
                 <p>2.0 / 14 September 2016</p>
                 <p>>10.1.5 / 7 October 2020</p>
