added the anchor links

--- a/index.html
+++ b/index.html
@@ -30,21 +30,33 @@
               >History</a
             >
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Naming</a></li>
+              <li>
+                <a class="dropdown-item" href="#Naming">Naming</a>
+              </li>
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Version 2</a></li>
-              <li><a class="dropdown-item" href="#">Version 4</a></li>
-              <li><a class="dropdown-item" href="#">Version 5</a></li>
-              <li><a class="dropdown-item" href="#">Version 6</a></li>
-              <li><a class="dropdown-item" href="#">Version 7</a></li>
-              <li><a class="dropdown-item" href="#">Version 8</a></li>
-              <li><a class="dropdown-item" href="#">Version 9</a></li>
-              <li><a class="dropdown-item" href="#">Version 10</a></li>
+              <li>
+                <a class="dropdown-item" href="#Version2">Version 2</a>
+              </li>
+              <li><a class="dropdown-item" href="#Version4">Version 4</a></li>
+              <li><a class="dropdown-item" href="#Version5">Version 5</a></li>
+              <li><a class="dropdown-item" href="#Version6">Version 6</a></li>
+              <li><a class="dropdown-item" href="#Version7">Version 7</a></li>
+              <li>
+                <a class="dropdown-item" href="#Version8">Version 8</a>
+              </li>
+              <li><a class="dropdown-item" href="#Version9">Version 9</a></li>
+              <li>
+                <a class="dropdown-item" href="#Version10">Version 10</a>
+              </li>
 
               <li><hr class="dropdown-divider" /></li>
-              <li><a class="dropdown-item" href="#">Future releases</a></li>
               <li>
-                <a class="dropdown-item" href="#"
+                <a class="dropdown-item" href="#Future-Releases"
+                  >Future releases</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item" href="#Support-Policy"
                   >Support policy and schedule</a
                 >
               </li>
@@ -60,12 +72,20 @@
               >Libraries</a
             >
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Angular Material</a></li>
-              <li><a class="dropdown-item" href="#">Video Tutorial</a></li>
+              <li>
+                <a class="dropdown-item" href="#Angular-Material"
+                  >Angular Material</a
+                >
+              </li>
+              <li>
+                <a class="dropdown-item" href="#Video-Tutorial"
+                  >Video Tutorial</a
+                >
+              </li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Video Tutorial</a>
+            <a class="nav-link" href="#Video-Tutorial">Video Tutorial</a>
           </li>
         </ul>
       </Navbar>
@@ -129,7 +149,7 @@
             <h2>History</h2>
             <hr />
           </div>
-          <div class="row" id="naming-row">
+          <div class="row" id="Naming">
             <h3>Naming</h3>
             <p>
               Originally, the rewrite of AngularJS was called "Angular 2", but
@@ -139,7 +159,7 @@
               without the "JS" referring to versions 2 and up.
             </p>
           </div>
-          <div class="row" id="version2-row">
+          <div class="row" id="Version2">
             <h3>Version 2</h3>
             <p>
               Angular 2.0 was announced at the ng-Europe conference 22–23.
@@ -151,7 +171,7 @@
               version was released on September 14, 2016.
             </p>
           </div>
-          <div class="row" id="version4-row">
+          <div class="row" id="Version4">
             <h3>Version 4</h3>
             <p>
               On 13 December 2016 Angular 4 was announced, skipping 3 to avoid a
@@ -180,7 +200,7 @@
               <li>Conditionally <i>disable</i> animations.</li>
             </ul>
           </div>
-          <div class="row" id="version5-row">
+          <div class="row" id="Version5">
             <h3>Version 5</h3>
             <p>
               Angular 5 was released on November 1, 2017. Key improvements in
@@ -188,7 +208,7 @@
               optimizer and improvements related to Material Design.
             </p>
           </div>
-          <div class="row" id="version6-row">
+          <div class="row" id="Version6">
             <h3>Version 6</h3>
             <p>
               Angular 6 was released on May 4, 2018. This is a major release
@@ -200,7 +220,7 @@
               Animations Performance Improvements, and RxJS v6.
             </p>
           </div>
-          <div class="row" id="version7-row">
+          <div class="row" id="Version7">
             <h3>Version 7</h3>
             <p>
               Angular 7 was released on October 18, 2018. Updates regarding
@@ -211,7 +231,7 @@
               supporting Node 8).
             </p>
           </div>
-          <div class="row" id="version8-row">
+          <div class="row" id="Version8">
             <h3>Version 8</h3>
             <p>
               Angular 8 was released on May 28, 2019. Featuring Differential
@@ -229,7 +249,7 @@
               <li>Backwards compatibility</li>
             </ul>
           </div>
-          <div class="row" id="version9-row">
+          <div class="row" id="Version9">
             <h3>Version 9</h3>
             <p>
               Angular 9 was released on February 6, 2020. Version 9 moves all
@@ -249,7 +269,7 @@
               <li>Improved Internationalization</li>
             </ul>
           </div>
-          <div class="row" id="version10-row">
+          <div class="row" id="Version10">
             <h3>Version 10</h3>
             <p>Angular 10 was released on June 24, 2020.</p>
             <ul class="me-4 ms-4 px-4">
@@ -261,7 +281,7 @@
               <li>Deprecations and Removals</li>
             </ul>
           </div>
-          <div class="row" id="future-releases">
+          <div class="row" id="Future-Releases">
             <h3>Future releases</h3>
             <p>
               Since v9, the Angular team has moved all new applications to use
@@ -274,7 +294,7 @@
               twice-a-year upgrades.
             </p>
           </div>
-          <div class="row" id="support-policy">
+          <div class="row" id="Support-Policy">
             <h3>Support policy and schedule</h3>
             <p>
               All the major releases are supported for 18 months. This consists
@@ -325,10 +345,10 @@
               <small><b>Table 1.</b> Supported Angular versions</small>
             </p>
           </div>
-          <div class="row" id="libraries">
+          <div class="row" id="Libraries">
             <h3>Libraries</h3>
             <hr />
-            <h3>Angular Material</h3>
+            <h3 id="Angular-Material">Angular Material</h3>
             <p>
               <i
                 >"Angular Material" redirects here. For the library of the
@@ -341,7 +361,7 @@
               Material Design in Angular.
             </p>
           </div>
-          <div class="row mb-4" id="video-tutorial">
+          <div class="row mb-4" id="Video-Tutorial">
             <h3>Video Tutorial</h3>
             <hr />
             <p>
